k8s/base/analytics-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: logistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: analytics-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4020
          readinessProbe:
            httpGet:
              path: /api/v1/analytics/summary
              port: 4020
            initialDelaySeconds: 8
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/analytics/summary
              port: 4020
            initialDelaySeconds: 15
            periodSeconds: 15
