k8s/base/shipment-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipment-service
  namespace: logistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipment-service
  template:
    metadata:
      labels:
        app: shipment-service
    spec:
      containers:
        - name: shipment-service
          image: shipment-service:local
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          ports:
            - containerPort: 4001
          readinessProbe:
            httpGet:
              path: /health
              port: 4001
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4001
            initialDelaySeconds: 10
            periodSeconds: 10
