k8s/base/analytics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: logistics
spec:
  selector:
    app: analytics-service
  ports:
    - name: http
      port: 4020
      targetPort: 4020
