k8s/base/tracking-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracking-service
  namespace: logistics
spec:
  selector:
    app: tracking-service
  ports:
    - name: http
      port: 4002
      targetPort: 4002
